targets/srv0/k3s/prowlarr/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prowlarr-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: prowlarr
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: radarr
        - podSelector:
            matchLabels:
              app: sonarr
      ports:
        - port: 9696
  policyTypes:
    - Ingress
